fix close dialog

--- a/src/features/registration-form/registration-info-form/registration-info-form.component.html
+++ b/src/features/registration-form/registration-info-form/registration-info-form.component.html
@@ -1,6 +1,6 @@
 <form
   class="flex flex-col items-center mt-10" [formGroup]="personalInfoForm">
-  <h3 class="medium mt-10 mb-0 text-center neutrals-text-950 dir-rtl">צור חשבון!</h3>
+  <h3 class="medium mt-10 mb-0 text-center neutrals-text-950 dir-rtl">{{ title }}</h3>
   <div class="personal-info mt-8">
     <smarti-input-field
       [customWidth]="'536px'"
@@ -46,7 +46,7 @@
   </div>
   <smarti-button
     [customMargin]="'40px 0 64px'"
-    [text]="'הירשם'"
+    [text]="textButton"
     [typeClass]="'confirm'"
     (buttonClicked)="navigateToUploadFile()"
     [disabled]="isDisabled"
