--- a/src/features/registration-form/upload-document/upload-document.component.html
+++ b/src/features/registration-form/upload-document/upload-document.component.html
@@ -81,7 +81,10 @@
   #asideProcessDialogTemplate
   let-observer
 >
-  <smarti-aside-process-dialog [observer]="observer"></smarti-aside-process-dialog>
+  <smarti-aside-process-dialog
+    [step]="'upload_file'"
+    [observer]="observer"
+  ></smarti-aside-process-dialog>
 </ng-template>
 
 <ng-template
