--- a/src/features/registration-form/payment-instruction-form/payment-instruction-form.component.html
+++ b/src/features/registration-form/payment-instruction-form/payment-instruction-form.component.html
@@ -49,7 +49,8 @@
   <div class="flex flex-col gap-6 mt-6 mb-6">
     <div class="success-notification-icon-114 self-center"></div>
     <h3 class="medium neutrals-text-950 mt-0 mb-0 self-center text-center w-[285px]">הנך מועבר לדף הבית</h3>
-  </div></ng-template>
+  </div>
+</ng-template>
 <!--  <div-->
 <!--    class="close-cross-24 close-dialog-left cursor-pointer"-->
 <!--    (click)="closeDialog(observer)"-->
@@ -60,5 +61,8 @@
   #asideProcessDialogTemplate
   let-observer
 >
-  <smarti-aside-process-dialog [observer]="observer"></smarti-aside-process-dialog>
+  <smarti-aside-process-dialog
+    [step]="'payment_instruction'"
+    [observer]="observer"
+  ></smarti-aside-process-dialog>
 </ng-template>
