--- a/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
+++ b/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
@@ -7,7 +7,7 @@
   </div>
   <h3 class="medium text-center">הגדרת סיסמא</h3>
   <div class="mt-[74px] regular-text neutrals-text-950 text-center dir-rtl">
-    יש להגדיר סיסמא לשם משתמש: {{ currentStorageData.email }}
+    יש להגדיר סיסמא לשם משתמש: {{ email }}
   </div>
   <div class="mt-2 regular-text neutrals-text-950 text-center dir-rtl">
     הסיסמא צריכה להכיל 8 תווים, לפחות עוד אחת גדולה באנגלית וסימן.
@@ -27,4 +27,19 @@
       [disabled]="isDisabled"
     ></smarti-button>
   </div>
+  <div
+    class="neutrals-text-950 paragraph-text underline cursor-pointer text-right mb-4 mr-7 hover:opacity-90"
+    (click)="openDialogForAsideProcess(asideProcessDialogTemplate)"
+  >
+    אמשיך את התהליך אח״כ
+  </div>
 </div>
+<ng-template
+  #asideProcessDialogTemplate
+  let-observer
+>
+  <smarti-aside-process-dialog
+    [step]="'set_password'"
+    [observer]="observer"
+  ></smarti-aside-process-dialog>
+</ng-template>
