--- a/src/features/registration-form/transfer-money-form/transfer-money-form.component.html
+++ b/src/features/registration-form/transfer-money-form/transfer-money-form.component.html
@@ -16,7 +16,7 @@
       <div class="paragraph-text neutrals-text-950 self-center dir-rtl">סה״כ סכום לתשלום לקופות:</div>
     </div>
     <div class="flex gap-2">
-      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl"></div>
+      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">{{currentStorageData.employeesCount}}</div>
       <div class="paragraph-text neutrals-text-950 self-center dir-rtl">מספר העובדים:</div>
     </div>
   </div>
@@ -41,9 +41,7 @@
       (buttonClicked)="navigateToNextPageOrOpenDialog(bankDetailsDialogTemplate)"
     ></smarti-button>
   </div>
-  <!-- TODO: don't have functional for aside process registration, after add need to remove "false" and connect to api -->
   <div
-    *ngIf="false"
     class="neutrals-text-950 paragraph-text underline cursor-pointer text-right mb-4 mr-7 hover:opacity-90"
     (click)="openDialogForAsideProcess(asideProcessDialogTemplate)"
   >
