--- a/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
+++ b/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
@@ -50,6 +50,7 @@
       [customHeight]="'56px'"
       [customWidth]="'147px'"
       [text]="'אישור'"
+      [disabled]="isDisabled"
       (buttonClicked)="navigateToVerifyCode()"
     ></smarti-button>
   </div>
