--- a/src/features/registration-form/payment-instruction-form/payment-instruction-form.component.html
+++ b/src/features/registration-form/payment-instruction-form/payment-instruction-form.component.html
@@ -43,6 +43,7 @@
 
 <ng-template
   #successUploadTemplate
+  let-observer
 >
   <div class="flex flex-col gap-6 mt-6 mb-6">
     <div class="success-notification-icon-114 self-center"></div>
