--- a/src/features/registration-form/upload-document/upload-document.component.html
+++ b/src/features/registration-form/upload-document/upload-document.component.html
@@ -16,6 +16,7 @@
       [customWidth]="'536px'"
       [customHeight]="'150px'"
       [control]="uploadDocumentsForm.controls.files"
+      [is_previous_files]="is_file"
       (fileUploaded)="fileUploaded($event)"
       (fileRemoved)="removeFile($event)"
     ></smarti-input-file>
