--- a/src/features/registration-form/registration-info-form/registration-info-form.component.html
+++ b/src/features/registration-form/registration-info-form/registration-info-form.component.html
@@ -40,7 +40,10 @@
   <div class="personal-info mt-8 flex gap-4">
     <div class="personal-info__text paragraph-text-medium text-right neutrals-text-950 margin-left-160">
       <div>קראתי והסכמתי לתנאי השימוש ומדיניות</div>
-      <div>הפרטיות של Smarti</div>
+      <div>
+        <span>Smarti</span>
+        הפרטיות של
+      </div>
     </div>
     <smarti-input-checkbox [control]="personalInfoForm.controls.acceptPrivacy"></smarti-input-checkbox>
   </div>
