--- a/src/pages/contact/contact.component.html
+++ b/src/pages/contact/contact.component.html
@@ -4,14 +4,12 @@
     <h1 class="mt-20 medium mt-0 mb-0 bright-turquoise-text-500 text-center">צרו קשר</h1>
     <div class="flex gap-136px justify-center">
       <div class="contact-manager-img mt-8 mb-34"></div>
-      <div class="mt-24 flex flex-col">
+      <div class="flex flex-col">
         <h3 class="medium dir-rtl neutrals-text-950 contact-header mt-0 mb-1 self-end">
-          Are you interested in a Smarti platform?
+          איך נוח לך לדבר איתנו?
         </h3>
-        <div class="neutrals-text-950 dir-rtl regular-text mt-8">איך נוח לך לדבר איתנו?</div>
-
         <div class="bg-white mt-16 contact-block rounded-l flex justify-between p-6 box-shadow-regular">
-          <div class="neutrals-text-950 regular-text self-center mt-2">03-6549300 | 03-5228825</div>
+          <div class="neutrals-text-950 regular-text self-center mt-2">03-5228825</div>
           <h3 class="medium neutrals-text-950 neutrals-text-950 self-center mt-0 mb-0">יצירת קשר בטלפון</h3>
           <div class="phone-fill-icon-64 rounded-m self-center"></div>
         </div>
@@ -30,7 +28,7 @@
               *ngIf="isExpanded"
               [customButtonWidth]="'107px'"
               [customHeight]="'42px'"
-              [text]="'Close'"
+              [text]="'סגור'"
               [typeClass]="'dark'"
               (buttonClicked)="toggleExpandedContent()"
             ></smarti-button>
@@ -58,29 +56,30 @@
   >
     <div class="mt-6">
       <smarti-input-field
-        [placeholder]="'Your Name'"
+        [placeholder]="'שם מלא'"
         [customWidth]="'536px'"
         [control]="leadsForm.controls.name"
       ></smarti-input-field>
     </div>
     <div class="mt-8">
       <smarti-input-field
-        [placeholder]="'Email Address*'"
+        [placeholder]="'כתובת מייל*'"
         [customWidth]="'536px'"
         [control]="leadsForm.controls.email"
       ></smarti-input-field>
     </div>
     <div class="mt-8">
-      <smarti-input-field
-        [placeholder]="'Phone Number*'"
+      <smarti-input-number
+        [placeholder]="'טלפון*'"
         [customWidth]="'536px'"
+        [maxLength]="10"
         [control]="leadsForm.controls.phone"
-      ></smarti-input-field>
+      ></smarti-input-number>
     </div>
     <div class="mt-20 mb-14">
       <smarti-button
         [typeClass]="'confirm'"
-        [text]="'Send'"
+        [text]="'שלח'"
         [customButtonWidth]="'232px'"
         (buttonClicked)="sendContactRequest()"
         [disabled]="!leadsForm.valid"
