--- a/src/shared/dialog/leads-dialog/leads-dialog.component.html
+++ b/src/shared/dialog/leads-dialog/leads-dialog.component.html
@@ -51,10 +51,10 @@
       class="right-side-img"
       [style.background]="'url(' + backgroundImage + ')'"
     ></div>
-    <h1
-      class="medium neutrals-text-950 text-center mt-10 mb-8 w-input-full-hd margin-rl-auto"
+    <h3
+      class="medium mt-20 dir-rtl neutrals-text-950 mb-1 margin-rl-auto w-header-leads"
       [innerHTML]="headerText"
-    ></h1>
+    ></h3>
     <div
       class="paragraph-text-medium neutrals-text-950 text-center w-input-full-hd margin-rl-auto"
       [innerHTML]="descriptionText"
