--- a/src/shared/layout/landing-layout/company-carousel-layout/company-carousel-layout.component.scss
+++ b/src/shared/layout/landing-layout/company-carousel-layout/company-carousel-layout.component.scss
@@ -10,7 +10,7 @@
   }
 
   &__logo {
-    background: url("/assets/img/ikea-logo.png");
+    //background: url("/assets/img/ikea-logo.png");
     width: 96px;
     height: 96px;
     margin-inline-end: 8px;
