--- a/src/shared/layout/landing-layout/footer/footer.component.html
+++ b/src/shared/layout/landing-layout/footer/footer.component.html
@@ -5,20 +5,20 @@
       (click)="navigateToPageWithoutAnchor(mainLink)"
     ></div>
     <div
-      class="footer-link-text dir-rtl white-text gt-sm-desktop:ml-150 sm-desktop:ml-[100px] lg-tablet:ml-8 self-end"
+      class="footer-link-text dir-rtl white-text gt-sm-desktop:ml-150 sm-desktop:ml-[100px] lg-tablet:ml-8 self-end cursor-pointer"
       (click)="navigateToPageWithoutAnchor(contactLink)"
     >
       צרו קשר
     </div>
     <div
-      class="footer-link-text dir-rtl white-text self-end"
+      class="footer-link-text dir-rtl white-text self-end cursor-pointer"
       smartiScrollAnchor="banner"
       (click)="navigateToPageWithAnchor(mainLink, 'banner')"
     >
       אודות
     </div>
     <div
-      class="footer-link-text dir-rtl white-text self-end"
+      class="footer-link-text dir-rtl white-text self-end cursor-pointer"
       smartiScrollAnchor="about"
       (click)="navigateToPageWithAnchor(mainLink, 'about')"
     >
@@ -36,8 +36,8 @@
     <div class="instagram-link-black-22 cursor-pointer"></div>
   </div>
   <div class="mt-5 paragraph-text neutrals-text-950">רחוב התע״ש 10, רמת גן</div>
-  <div class="mt-5 paragraph-text neutrals-text-950">office@smarti.com</div>
-  <div class="mt-5 paragraph-text neutrals-text-950">03-6549300 | 03-5228825</div>
+  <div class="mt-5 paragraph-text neutrals-text-950">officemanager@smarti.co.il</div>
+  <div class="mt-5 paragraph-text neutrals-text-950">03-5228825</div>
 </div>
 
 <div class="gt-tablet:hidden flex flex-col justify-center mt-5 mb-8">
@@ -46,21 +46,21 @@
     (click)="navigateToPageWithoutAnchor(mainLink)"
   ></div>
   <div
-    class="footer-link-text dir-rtl white-text self-center mt-5"
+    class="footer-link-text dir-rtl white-text self-center mt-5 cursor-pointer"
     smartiScrollAnchor="about"
     (click)="navigateToPageWithAnchor(mainLink, 'about')"
   >
     פתרונות
   </div>
   <div
-    class="footer-link-text dir-rtl white-text self-center mt-5"
+    class="footer-link-text dir-rtl white-text self-center mt-5 cursor-pointer"
     smartiScrollAnchor="banner"
     (click)="navigateToPageWithAnchor(mainLink, 'banner')"
   >
     אודות
   </div>
   <div
-    class="footer-link-text dir-rtl white-text self-center mt-5"
+    class="footer-link-text dir-rtl white-text self-center mt-5 cursor-pointer"
     (click)="navigateToPageWithoutAnchor(contactLink)"
   >
     צרו קשר
