--- a/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
@@ -1,7 +1,7 @@
 <div class="question-banner-block h-[360px] flex flex-col items-center lt-lg-tablet:h-[460px]">
   <h3 class="medium text-center mt-12 white-text margin-rl-auto mb-0">לשאלות ומידע נוסף</h3>
   <div
-    class="flex flex-row gap-4 mt-8 w-full gt-desktop:justify-center lt-lg-tablet:flex-col lt-lg-tablet:w-[calc(100%-32px)]"
+    class="flex flex-row gap-4 mr-4 mt-8 w-full gt-desktop:justify-center lt-lg-tablet:flex-col lt-lg-tablet:w-[calc(100%-32px)]"
   >
     <smarti-input-field
       class="w-full gt-tablet:ml-4 gt-desktop:w-[536px]"
