--- a/src/shared/dialog/forward-request-dialog/forward-request-dialog.component.html
+++ b/src/shared/dialog/forward-request-dialog/forward-request-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="mt-4 mb-4 mx-auto">
   <h3 class="medium neutrals-text-950 text-center w-[565px] mx-auto dir-rtl">
-    יש למלא את הפרטי איש הקשר אליו ברצונך להעביר בקשת העלאת הקובץ
+    יש למלא את פרטי איש הקשר אליו ברצונך להעביר את בקשת העלאת הקובץ
   </h3>
   <div
     class="flex flex-col items-center mt-14 gap-8"
