--- a/src/shared/dialog/bank-details-dialog/bank-details-dialog.component.html
+++ b/src/shared/dialog/bank-details-dialog/bank-details-dialog.component.html
@@ -3,7 +3,7 @@
   <div class="mt-12 flex justify-around w-[658px] h-[80px] rounded-l bg-mint self-center">
     <div class="flex gap-2">
       <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
-        {{ currentStorageData.total }} ש״ח
+        {{ currentStorageData.total | number: "1.2-2" }} ש״ח
       </div>
       <div class="paragraph-text neutrals-text-950 self-center dir-rtl">סה״כ סכום לתשלום לקופות:</div>
     </div>
