--- a/src/shared/layout/landing-layout/footer/footer.component.html
+++ b/src/shared/layout/landing-layout/footer/footer.component.html
@@ -12,15 +12,15 @@
     </div>
     <div
       class="footer-link-text dir-rtl white-text self-end"
-      smartiScrollAnchor="banner"
-      (click)="navigateToPageWithAnchor(mainLink, 'banner')"
+      smartiScrollAnchor="about"
+      (click)="navigateToPageWithAnchor(mainLink, 'about')"
     >
       אודות
     </div>
     <div
       class="footer-link-text dir-rtl white-text self-end"
-      smartiScrollAnchor="about"
-      (click)="navigateToPageWithAnchor(mainLink, 'about')"
+      smartiScrollAnchor="solutions"
+      (click)="navigateToPageWithAnchor(mainLink, 'solutions')"
     >
       פתרונות
     </div>
