--- a/src/shared/layout/landing-layout/header-overlay-mobile/header-overlay-mobile.component.html
+++ b/src/shared/layout/landing-layout/header-overlay-mobile/header-overlay-mobile.component.html
@@ -25,15 +25,15 @@
     <!--      solution-->
     <a
       class="paragraph-text-light self-center cursor-pointer"
-      smartiScrollAnchor="about"
-      (click)="navigateToPageWithAnchor(mainLink, 'about')"
+      smartiScrollAnchor="solutions"
+      (click)="navigateToPageWithAnchor(mainLink, 'solutions')"
     >
       פתרונות
     </a>
     <a
       class="paragraph-text-light self-center cursor-pointer"
-      smartiScrollAnchor="banner"
-      (click)="navigateToPageWithAnchor(mainLink, 'banner')"
+      smartiScrollAnchor="about"
+      (click)="navigateToPageWithAnchor(mainLink, 'about')"
     >
       אודות
     </a>
