--- a/src/shared/layout/landing-layout/header/header.component.html
+++ b/src/shared/layout/landing-layout/header/header.component.html
@@ -73,16 +73,16 @@
         <!--      about-->
         <a
           class="my-0 gt-lg-tablet:mx-[40px] mx-6 paragraph-text-light self-center cursor-pointer"
-          smartiScrollAnchor="banner"
-          (click)="navigateToPageWithAnchor(mainLink, 'banner')"
+          smartiScrollAnchor="about"
+          (click)="navigateToPageWithAnchor(mainLink, 'about')"
         >
           אודות
         </a>
         <!--      solution-->
         <a
           class="my-0 gt-lg-tablet:mx-[40px] mx-6 paragraph-text-light self-center cursor-pointer"
-          smartiScrollAnchor="about"
-          (click)="navigateToPageWithAnchor(mainLink, 'about')"
+          smartiScrollAnchor="solutions"
+          (click)="navigateToPageWithAnchor(mainLink, 'solutions')"
         >
           פתרונות
         </a>
