--- a/src/shared/layout/landing-layout/start-day-with-smarti-layout/start-day-with-smarti-layout.component.html
+++ b/src/shared/layout/landing-layout/start-day-with-smarti-layout/start-day-with-smarti-layout.component.html
@@ -1,4 +1,8 @@
-<div class="mt-60">
+<div
+  class="mt-60"
+  smartiScrollSection="about"
+  id="about"
+>
   <div class="smarti-heading-text bright-turquoise-text-500">תתחיל את היום עם Smarti</div>
   <div class="smarti-describing-text my-0 mx-auto white-text">מגוון כלים ופתרונות יומיומיים שחוסכים לכם זמן וכסף</div>
 </div>
