--- a/src/shared/layout/landing-layout/landing-layout.component.html
+++ b/src/shared/layout/landing-layout/landing-layout.component.html
@@ -1,6 +1,6 @@
 <smarti-main-banner-layout #banner></smarti-main-banner-layout>
-<smarti-about-layout #about></smarti-about-layout>
-<smarti-start-day-with-smarti-layout></smarti-start-day-with-smarti-layout>
+<smarti-about-layout #solutions></smarti-about-layout>
+<smarti-start-day-with-smarti-layout #about></smarti-start-day-with-smarti-layout>
 <smarti-connect-now-layout></smarti-connect-now-layout>
 <smarti-company-carousel-layout></smarti-company-carousel-layout>
 <smarti-run-business-layout></smarti-run-business-layout>
