--- a/src/features/reset-password-form/form-container-reset-password/form-container-reset-password.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/form-container-reset-password.component.html
@@ -1,4 +1,10 @@
 <ng-container [ngSwitch]="currentStep$ | async">
+  <smarti-choose-verify-type
+    *ngSwitchCase="'chooseVerifyType'"
+    [startingForm]="userForm.get('verifyStep')?.value"
+    (subformInitialized)="subformInitialized('chooseVerifyType', $event)"
+    (changeStep)="changeStep('chooseVerifyType', $event)">
+  </smarti-choose-verify-type>
   <smarti-verify-step
     *ngSwitchCase="'verifyStep'"
     [startingForm]="userForm.get('verifyStep')?.value"
