--- a/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
@@ -11,6 +11,7 @@
     <smarti-input-password
       [customWidth]="'536px'"
       [placeholder]="'הכנס סיסמא בשנית*'"
+      [control]="passwordControl"
       (outputValue)="onChangeSecondPasswordValue($event)"
     ></smarti-input-password>
   </div>
