--- a/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.scss
+++ b/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.scss
@@ -3,8 +3,8 @@
   background-size: cover;
 }
 
-//@media screen and (max-width: 1024px) {
-//  .display-text {
-//   font-size: 35px !important;
-//  }
-//}
+@media screen and (max-width: 1024px) {
+  .display-text {
+   font-size: 35px !important;
+  }
+}
