--- a/src/features/login-form/login-form.component.html
+++ b/src/features/login-form/login-form.component.html
@@ -8,14 +8,14 @@
     </h3>
     <div class="mt-24">
       <smarti-input-field
-        [customWidth]="'536px'"
+        [customWidth]="customWidth"
         [placeholder]="'אימייל*'"
         [control]="loginForm.controls.email"
       ></smarti-input-field>
     </div>
     <div class="mt-14">
       <smarti-input-password
-        [customWidth]="'536px'"
+        [customWidth]="customWidth"
         [placeholder]="'סיסמא*'"
         [control]="loginForm.controls.password"
       ></smarti-input-password>
