--- a/src/features/progress-bar/progress-bar.component.html
+++ b/src/features/progress-bar/progress-bar.component.html
@@ -1,4 +1,4 @@
-<div class="progress-bar flex flex-col mt-6">
+<div class="progress-bar flex flex-col mt-6 lt-lg-tablet:px-2">
   <div class="caption-text neutrals-text-950 margin-start-auto">תהליך הרשמה</div>
   <div class="progress-bar__content flex rounded-l">
     <div
