--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -5,14 +5,14 @@
     [leftBlockClickedText]="'הרשמה'"
     [redirectLink]="'/registration'"
   ></smarti-header-auth-layout>
-  <div class="w-full-hd margin-0-auto">
-    <div class="flex justify-between">
+  <div class="w-full-hd margin-0-auto lt-lg-tablet:w-[100%]">
+    <div class="flex justify-between lt-lg-tablet:hidden">
       <div class="seated-working-woman-img"></div>
       <h1 class="medium text-right self-center neutrals-text-950">
         <div>להתחברות</div>
       </h1>
     </div>
-    <div class="w-[1080px] box-shadow-big bg-white rounded-l">
+    <div class=" box-shadow-big bg-white rounded-l ">
       <smarti-login-form></smarti-login-form>
     </div>
   </div>
