--- a/src/shared/layout/header-auth-layout/header-auth-layout.component.html
+++ b/src/shared/layout/header-auth-layout/header-auth-layout.component.html
@@ -1,8 +1,8 @@
 <div
   *ngIf="haveLeftBLock; else onlyLogoTemplate"
-  class="auth-header flex justify-between"
+  class="auth-header flex justify-between lt-lg-tablet:flex-col dir-rtl"
 >
-  <h4 class="mt-0 medium truncate dir-rtl">
+  <h4 class="mt-0 medium truncate order-1">
     {{ leftBlockText }}
     <span
       class="bright-turquoise-text-500 neutrals-text-950 cursor-pointer"
