--- a/src/assets/styles/inputs.scss
+++ b/src/assets/styles/inputs.scss
@@ -146,3 +146,10 @@ tui-text-area {
     line-height: 24px!important;
   }
 }
+
+@media screen and (max-width: 1024px) {
+  tui-files {
+    width: 320px!important;
+  }
+
+}
