--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -235,3 +235,13 @@ h4 {
 .f-35{
   font-size: 35px !important;
 }
+
+@media screen and (max-width: 1024px) {
+  .regular-text {
+    font-family: Rubik, sans-serif;
+    font-size: 16px !important;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+  }
+}
