--- a/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
+++ b/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
@@ -6,15 +6,15 @@
     < חזרה אחורה
   </div>
   <h3 class="medium text-center">הגדרת סיסמא</h3>
-  <div class="mt-[74px] regular-text neutrals-text-950 text-center dir-rtl">
+  <div class="mt-[74px] regular-text neutrals-text-950 text-center dir-rtl lt-lg-tablet:mt-5 mx-4">
     יש להגדיר סיסמא לשם משתמש: {{ email }}
   </div>
-  <div class="mt-2 regular-text neutrals-text-950 text-center dir-rtl">
+  <div class="mt-2 regular-text neutrals-text-950 text-center dir-rtl mx-4">
     הסיסמא צריכה להכיל 8 תווים, לפחות עוד אחת גדולה באנגלית וסימן.
   </div>
   <div class="mx-auto mt-24 w-fit">
     <smarti-input-password
-      [customWidth]="'536px'"
+      [customWidth]="customWidth"
       [placeholder]="'סיסמא*'"
       [control]="passwordControl"
     ></smarti-input-password>
