--- a/src/shared/layout/landing-layout/company-carousel-layout/company-carousel-layout.component.html
+++ b/src/shared/layout/landing-layout/company-carousel-layout/company-carousel-layout.component.html
@@ -22,10 +22,10 @@
         class="company-list-item rounded-l border-neutrals-800 bg-neutrals-950"
         *ngFor="let company of companies$"
       >
-        <div class="company-list-item__image" [style.background-image]="'url(' + company?.smallImag + ')'"></div>
+        <div class="company-list-item__image" [style.background-image]="'url(' + company?.bigImg + ')'"></div>
         <div class="flex justify-end gap-3-5">
           <div class="medium-text mt-2 dir-rtl white-text">{{company?.name}}</div>
-          <div class="company-list-item__logo rounded-l" [style.background]="'url(' + company?.smallImag + ')'"></div>
+          <div class="company-list-item__logo rounded-l" [style.background]="'url(' + company?.smallImg + ')'"></div>
         </div>
       </div>
     </div>
