--- a/src/shared/layout/landing-layout/landing-layout.component.html
+++ b/src/shared/layout/landing-layout/landing-layout.component.html
@@ -7,15 +7,15 @@
 <smarti-employee-management-layout></smarti-employee-management-layout>
 <!--<smarti-blog-layout #blog></smarti-blog-layout>-->
 <smarti-questions-banner-layout></smarti-questions-banner-layout>
-<div class="lt-lg-tablet:hidden">
+<div>
   <smarti-main-layout-popup
     [direction]="'left'"
     class="fixed left-landing-popup"
   ></smarti-main-layout-popup>
 </div>
-<div class="lt-lg-tablet:hidden">
+<div>
   <smarti-main-layout-popup
     [direction]="'right'"
-    class="fixed right-landing-popup"
+    class="fixed right-landing-popup "
   ></smarti-main-layout-popup>
 </div>
