--- a/src/shared/layout/landing-layout/landing-layout.component.scss
+++ b/src/shared/layout/landing-layout/landing-layout.component.scss
@@ -7,3 +7,9 @@
   bottom: 10px;
   right: 50px;
 }
+//@media screen and (max-width: 1024px) {
+//  .left-landing-popup {
+//    bottom: 200px !important;
+//    right: 50px !important;
+//  }
+//}
